<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="title_home">Home</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_course">Course</string>
    <string name="search_courses_hint">Search courses…</string>
    <string name="content_description_filter">Filter</string>
    <string name="sort_order_by_date">Sort By date</string>
    <string name="image_content_description">Image to attract attention</string>
    <string name="details_button">Details</string>
    <string name="favorite_button_content_description">Is Favorite</string>
    <string name="sort_order_unsorted">Sort by default</string>
    <string name="button_start_course">Start course</string>
    <string name="go_to_platform_button">Got to platform</string>
    <string name="about_course">About the course</string>
</resources>
