<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.thcourses.feature.home.presentation.home.HomeFragment">

    <LinearLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.search.SearchBar
            android:id="@+id/searchCoursesBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/search_courses_hint"
            app:elevation="0dp"
            app:backgroundTint="?attr/colorSurface"
            app:materialThemeOverlay="@style/ThemeOverlay.Thresources.SearchBar"
            />

        <Button
            android:id="@+id/filterButton"
            style="?attr/materialIconButtonFilledTonalStyle"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_marginEnd="@dimen/activity_vertical_margin"
            android:contentDescription="@string/content_description_filter"
            android:fitsSystemWindows="true"
            android:gravity="center"
            android:insetLeft="0dp"
            android:insetTop="0dp"
            android:insetRight="0dp"
            android:insetBottom="0dp"
            app:backgroundTint="?attr/colorSurface"
            app:icon="@drawable/ic_funnel_white_24dp"
            app:iconGravity="textStart"
            app:iconSize="24dp"
            app:iconTint="@color/thcoursesColorWhite"
            app:materialSizeOverlay="@style/SizeOverlay.Material3Expressive.Button.IconButton.Xlarge" />
    </LinearLayout>

    <TextView
        android:id="@+id/sortOrderIndicator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        android:gravity="end"
        style="@style/GreenTextButtonSmall"
        app:drawableEndCompat="@drawable/arrow_down_up_green_16dp"
        app:layout_constraintTop_toBottomOf="@id/appbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/sort_order_by_date" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/cards"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sortOrderIndicator"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:paddingTop="16dp"
        android:clipToPadding="false"
        tools:listitem="@layout/layout_rv_course_card"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
