<?xml version="1.0" encoding="utf-8"?>

<!-- Верстка сгенерена AI, практически не правлена, не было в задании -->

<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <!-- Обложка курса -->
            <ImageView
                android:id="@+id/courseImage"
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:contentDescription="@null"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"/>

            <!-- Кнопка назад -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/backButton"
                style="?attr/materialIconButtonFilledStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:icon="@drawable/ic_arrow_back_dark_24dp"
                app:iconTint="@color/thcoursesColorDark"
                app:backgroundTint="@color/thcoursesColorWhite"
                app:materialSizeOverlay="@style/SizeOverlay.Material3Expressive.Button.IconButton.Large"
                app:layout_collapseMode="pin"
                />

            <!-- Кнопка избранное -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/favoriteButton"
                style="?attr/materialIconButtonFilledStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_margin="16dp"
                android:checkable="true"
                app:icon="@drawable/favorites_toggle_icon_button_selector_small"
                app:iconTint="@color/thcoursesColorDark"
                app:backgroundTint="@color/thcoursesColorWhite"
                app:materialSizeOverlay="@style/SizeOverlay.Material3Expressive.Button.IconButton.Large"
                app:layout_collapseMode="pin"/>

            <!-- Рейтинг и дата -->
            <LinearLayout
                android:id="@+id/ratingDateContainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|start"
                android:layout_marginVertical="24dp"
                android:layout_marginHorizontal="16dp"
                android:orientation="horizontal"
                app:layout_collapseMode="parallax">

                <TextView
                    android:id="@+id/rating"
                    style="@style/TextStyle.ChipWithScrim"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:drawableStartCompat="@drawable/ic_star_fill_12dp"
                    tools:text="4.9"/>

                <TextView
                    android:id="@+id/date"
                    style="@style/TextStyle.ChipWithScrim"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    tools:text="22 мая 2024"/>
            </LinearLayout>

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <!-- Карточка с контентом -->
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/thcoursesColorDarkGray"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/activity_horizontal_margin">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.Material3.HeadlineMedium"
                android:textColor="@color/thcoursesColorWhite"
                tools:text="Java-разработчик с нуля"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center_vertical"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:id="@+id/authorAvatar"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:contentDescription="@null"/>

                <TextView
                    android:id="@+id/authorName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:textColor="@color/thcoursesColorWhite"
                    tools:text="Merion Academy"/>
            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/startCourseButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/button_start_course"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/goToPlatformButton"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textColor="@color/thcoursesColorWhite"
                android:text="@string/go_to_platform_button"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/about_course"
                android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
                android:textColor="@color/thcoursesColorWhite"/>

            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textColor="@color/thcoursesColorWhiteTranslucent50"
                tools:text="У вас будет 7 видеоуроков в высоком качестве..."/>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
